ebrains/nest-desktop/ingresses/resources/nest-desktop.apps.hbp.eu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["172.19.0.128","172.19.0.129","172.19.0.130","172.19.0.131","172.19.0.132","172.19.0.133","172.19.0.134","172.19.0.135","172.19.0.136","172.19.0.137","172.19.0.138"],"port":443,"protocol":"HTTPS","serviceName":"nest-desktop:nest-desktop-apps-ebrains-eu","ingressName":"nest-desktop:nest-desktop.apps.hbp.eu","hostname":"nest-desktop.apps.hbp.eu","path":"/","allNodes":false}]
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/permanent-redirect":"https://nest-desktop.apps.ebrains.eu"},"name":"nest-desktop.apps.hbp.eu","namespace":"nest-desktop"},"spec":{"ingressClassName":"nginx","rules":[{"host":"nest-desktop.apps.hbp.eu","http":{"paths":[{"backend":{"service":{"name":"nest-desktop-apps-ebrains-eu","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["nest-desktop.apps.hbp.eu"] [...]
    nginx.ingress.kubernetes.io/permanent-redirect: https://nest-desktop.apps.ebrains.eu
  creationTimestamp: '2024-06-19T10:35:42Z'
  generation: 1
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:nginx.ingress.kubernetes.io/permanent-redirect: {}
        f:spec:
          f:ingressClassName: {}
          f:rules: {}
          f:tls: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: '2024-06-19T10:35:42Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:field.cattle.io/publicEndpoints: {}
      manager: agent
      operation: Update
      time: '2024-12-03T15:38:41Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      subresource: status
      time: '2024-12-03T15:38:41Z'
  name: nest-desktop.apps.hbp.eu
  namespace: nest-desktop
  resourceVersion: '393695868'
  uid: 9d541099-a4ee-4000-ae4b-9253ac639b81
spec:
  ingressClassName: nginx
  rules:
    - host: nest-desktop.apps.hbp.eu
      http:
        paths:
          - backend:
              service:
                name: nest-desktop-apps-ebrains-eu
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nest-desktop.apps.hbp.eu
      secretName: tls-nest-desktop-apps
status:
  loadBalancer:
    ingress:
      - ip: 172.19.0.128
      - ip: 172.19.0.129
      - ip: 172.19.0.130
      - ip: 172.19.0.131
      - ip: 172.19.0.132
      - ip: 172.19.0.133
      - ip: 172.19.0.134
      - ip: 172.19.0.135
      - ip: 172.19.0.136
      - ip: 172.19.0.137
      - ip: 172.19.0.138
