ebrains/nest-desktop/ingresses/resources/nest-desktop.apps.tc.humanbrainproject.eu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["172.19.0.128","172.19.0.129","172.19.0.130","172.19.0.131","172.19.0.132","172.19.0.133","172.19.0.134","172.19.0.135","172.19.0.136","172.19.0.137","172.19.0.138"],"port":443,"protocol":"HTTPS","serviceName":"nest-desktop:nest-desktop-dev","ingressName":"nest-desktop:nest-desktop.apps.tc.humanbrainproject.eu","hostname":"nest-desktop.apps.tc.humanbrainproject.eu","path":"/","allNodes":false}]
  creationTimestamp: '2024-05-16T13:19:46Z'
  generation: 24
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      subresource: status
      time: '2024-12-03T15:38:35Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/publicEndpoints: {}
        f:spec:
          f:defaultBackend:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:port:
                .: {}
                f:number: {}
          f:ingressClassName: {}
          f:rules: {}
          f:tls: {}
      manager: agent
      operation: Update
      time: '2024-12-06T21:18:38Z'
  name: nest-desktop.apps.tc.humanbrainproject.eu
  namespace: nest-desktop
  resourceVersion: '406698428'
  uid: cd304316-c885-4681-a9ae-8a79589f29eb
spec:
  defaultBackend:
    service:
      name: nest-desktop-apps-tc-humanbrainproject-eu
      port:
        number: 8080
  ingressClassName: nginx
  rules:
    - host: nest-desktop.apps.tc.humanbrainproject.eu
      http:
        paths:
          - backend:
              service:
                name: nest-desktop-dev
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nest-desktop.apps.tc.humanbrainproject.eu
      secretName: tls-nest-desktop
status:
  loadBalancer:
    ingress:
      - ip: 172.19.0.128
      - ip: 172.19.0.129
      - ip: 172.19.0.130
      - ip: 172.19.0.131
      - ip: 172.19.0.132
      - ip: 172.19.0.133
      - ip: 172.19.0.134
      - ip: 172.19.0.135
      - ip: 172.19.0.136
      - ip: 172.19.0.137
      - ip: 172.19.0.138
